Fixes to SubtitleDownloader Added purgeSubs to command line Added Apache Commons IO for file handling